--- a/home_style.css
+++ b/home_style.css
@@ -1,6 +1,7 @@
 body {
       margin: 0;
       font-family: Merriweather Sans, regular;
+      
     }
 
     /* Navbar */
@@ -80,10 +81,10 @@ body {
 
 /* Keyframes for sliding images */
 @keyframes slide {
-  0% { background-image: url('img1.jpg'); }
-  33% { background-image: url('img2.jpg'); }
-  66% { background-image: url('img3.jpg'); }
-  100% { background-image: url('img1.jpg'); }
+  0% { background-image: url('Images/img1.jpg'); }
+  33% { background-image: url('Images/img2.jpg'); }
+  66% { background-image: url('Images/img3.jpg'); }
+  100% { background-image: url('Images/img1.jpg'); }
 }
 
 .purpose {
