--- a/home_style.css
+++ b/home_style.css
@@ -54,13 +54,13 @@ body {
       margin: 0 auto;
       justify-items: center;
       align-items: start;
-      padding: 0 20px;
+      padding: 10 10px;
       width: 100%;
     }
 
     .subject-card {
       width: 100%;
-      max-width: 300px;
+      max-width: 500px;
       height: 200px;
       perspective: 1000px;
       cursor: pointer;
@@ -352,20 +352,23 @@ body {
 
 /* Responsive design */
 @media (max-width: 1200px) {
-  .subjects-grid {
-    grid-template-columns: repeat(2, 1fr);
-    gap: 25px;
-    padding: 0 15px;
-  }
-  
-  .subject-card {
-    max-width: 280px;
-    height: 180px;
-    width: 100%;
-  }
+ .subjects-grid {
+  grid-template-columns: repeat(2, 1fr);
+  gap: 5px;
+  padding: 0 10px;
+}
+ 
+
+
+ .subject-card {
+  /* max-width: 380px; */
+  height: 220px;
+  width: 100%;
+}
+
   
   .card-front, .card-back {
-    padding: 25px 15px;
+    padding: 40px 15px;
   }
   
   .card-icon, .read-more-icon {
@@ -411,7 +414,7 @@ body {
   .subject-card {
     max-width: 250px;
     height: 160px;
-    width: 100%;
+    width: 50%;
   }
   
   .card-front, .card-back {
